<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".survey.plfsq.QuizQuestion02Content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="Question 2 out of 15"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorGrey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/bf_scale_question_two"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup_Question_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_Much_Better"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:padding="8dp"
            android:text="@string/much_better_than_normal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton_Better"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:padding="8dp"
            android:text="@string/better_than_normal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton_Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:padding="8dp"
            android:text="@string/normal_state"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton_Worse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:padding="8dp"
            android:text="@string/worse_than_normal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButton_Much_Worse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:padding="8dp"
            android:text="@string/much_worse_than_normal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RadioGroup>

    <Button
        android:id="@+id/button_Next_Question"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_state_color"
        android:enabled="false"
        android:onClick="goToQuestionThree"
        android:padding="8dp"
        android:text="@string/next"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

</LinearLayout>