<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".survey.plfsq.QuizQuestion11Content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="Question 11 out of 15 \nOptional"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorGrey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/bf_question_eleven"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_Question_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0.5"
            android:hint="Answer in beats/minute"
            android:inputType="number" />

        <SurfaceView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/button_Next_Question"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBlue"
        android:onClick="goToQuestionTwelve"
        android:padding="8dp"
        android:text="@string/next"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/heart_rate_howto"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorGrey" />

</LinearLayout>